# libgal

./: .gitignore  README.md  libgal.py  pyproject.toml
docs/: FSUtils.md  HTMLParser.md  Installation.md  LoadEnv.md  Logger.md  Request.md  SQLAlchemy.md  SQLMemory.md  Selenium.md  SimpleTeradata.md  Teradata.md  Utils.md
docs/by_example/: TeradataExamples.md  Teradata_Examples.md
libgal/: __init__.py
libgal/modules/: DatabaseAPI.py  FSUtils.py  Logger.py  MLS.py  ODBCTools.py  SQLAlchemy.py  SQLMemory.py  SQLMemoryDB.py  Sqlite.py  SqliteDB.py  Teradata.py  TeradataDB.py  Utils.py
tests/: CSVFileLoggerTests.py  FileLoggerTests.py  JSONFileLoggerTests.py  LoggerTests.py  SQLAlchemyTests.py  SQLAlchemy_test.py  SQliteTests.py  TeradataBasicTest.py  TeradataMLTests.py  Teradata_Basic_Test.py  TestEvaluateKsAndRocAuc.py  TestNumNormTransformer.py  TestsUtils.py  test_dataframe.py
